[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/jobs/flashlight.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/defaultFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/jobs/flashlight/flashlight.png" type="Texture" id=3]
[ext_resource path="res://assets/jobs/flashlight/battery.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="CircuitBreakers" type="TextureRect"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 3 )
stretch_mode = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Replace Battery"
align = 1
valign = 1

[node name="fresh" type="Label" parent="."]
anchor_right = 1.0
margin_left = 480.0
margin_top = 247.0
margin_right = -20.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 2 )
text = "Fresh
Battery"
align = 1
valign = 1

[node name="dead" type="Label" parent="."]
anchor_right = 1.0
margin_left = 330.0
margin_top = 244.0
margin_right = -170.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 2 )
text = "Fresh
Battery"
align = 1
valign = 1

[node name="freshBatterySlot" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 494.0
margin_top = 297.0
margin_right = 606.0
margin_bottom = 340.0
texture = ExtResource( 4 )
expand = true

[node name="deadBatterySlot" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 344.0
margin_top = 297.0
margin_right = 456.0
margin_bottom = 340.0
texture = ExtResource( 4 )
expand = true

[node name="deadBattery" type="TextureButton" parent="."]
margin_left = 389.0
margin_top = 158.0
margin_right = 501.0
margin_bottom = 201.0
texture_normal = ExtResource( 4 )
expand = true

[node name="freshBattery" type="TextureButton" parent="."]
margin_left = 494.0
margin_top = 297.0
margin_right = 606.0
margin_bottom = 340.0
texture_normal = ExtResource( 4 )
expand = true

[connection signal="pressed" from="deadBattery" to="." method="_dead_battery_clicked"]
[connection signal="pressed" from="freshBattery" to="." method="_fresh_battery_clicked"]
